Support for DTO entities in EntityImportExportImpl #3902
Also reduced some tech debt:
- improved parameter types
- improved nullability handling
- added tests